--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,25 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --color-title: #db00ff;
+  --accent-color: #ff0070;
+  --solid-color: #ff0070;
+  --color-subtitle: #000028;
+  --color-description: #f1b2ce;
+  --size-text: 18px;
+  background: url(/images/cover-image-dark.png) no-repeat center / cover;
+  background-attachment: fixed;
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-title: #db00ff;
+    --accent-color: #ff0070;
+    --solid-color: #ff0070;
+    --color-subtitle: #000028;
+    --color-description: #f1b2ce;
+    --size-text: 18px;
+    background: url(/images/cover-image-dark.png) no-repeat center / cover;
+    background-attachment: fixed;
+  }
+} 
