--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,26 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --color-title: #db00ff;
+  --accent-color: #ff0070;
+  --solid-color: #ff0070;
+  --color-subtitle: #000028;
+  --color-description: #f1b2ce;
+  --size-header: clamp(0rem, 0rem + 30.9333vw, 7.25rem);
+  --size-text: 18px;
+}
+
+@media (375px < width <= 768px) {
+  :root {
+  --size-header: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+}
+
+@media (768px < width <= 1024px) {
+  :root {
+    --size-header: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
