--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,20 +14,21 @@
   --solid-color: #ff0070;
   --color-subtitle: #000028;
   --color-description: #f1b2ce;
+  --size-header: clamp(0rem, 0rem + 30.9333vw, 7.25rem);
   --size-text: 18px;
-  background: url(/images/cover-image-dark.png) no-repeat center / cover;
-  background-attachment: fixed;
+  --background: url(../images/cover-image-dark.png) no-repeat center / cover;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-title: #db00ff;
-    --accent-color: #ff0070;
-    --solid-color: #ff0070;
-    --color-subtitle: #000028;
-    --color-description: #f1b2ce;
-    --size-text: 18px;
-    background: url(/images/cover-image-dark.png) no-repeat center / cover;
-    background-attachment: fixed;
-  }
-} 
+:root {
+  --color-title: #db00ff;
+  --accent-color: #ff0070;
+  --solid-color: #ff0070;
+  --color-subtitle: #000028;
+  --color-description: #f1b2ce;
+  --size-text: 18px;
+  --background: url(../images/cover-image-dark.png) no-repeat center / cover;
+}
+
+.page:is(.theme_auto) > header div:first-child {
+  visibility: visible;
+}
