--- a/styles/light.css
+++ b/styles/light.css
@@ -14,9 +14,9 @@
   --solid-color: #353430;
   --color-subtitle: #353430;
   --color-description: #353430;
+  --size-header: clamp(0rem, 0rem + 30.9333vw, 7.25rem);
   --size-text: 18px;
-  background: url(/images/cover-image-light.png) no-repeat center / cover;
-  background-attachment: fixed;  
+  --background: url(../images/cover-image-light.png) no-repeat center / cover;
 }
 
 @media (prefers-color-scheme: light) {
@@ -26,16 +26,16 @@
     --solid-color: #353430;
     --color-subtitle: #353430;
     --color-description: #353430;
+    --size-header: clamp(0rem, 0rem + 30.9333vw, 7.25rem);
     --size-text: 18px;
-    background: url(/images/cover-image-light.png) no-repeat center / cover;
-    background-attachment: fixed;       
+    --background: url(../images/cover-image-light.png) no-repeat center / cover;
+  }
+
+  .page:is(.theme_auto) > header div:first-child {
+    visibility: hidden;
   }
 }
 
 .page:is(.theme_light) > header div:first-child {
-  visibility: hidden;
-}
-
-.page:is(.theme_auto) > header div:first-child {
   visibility: hidden;
 }
