--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,17 +11,18 @@
   --color-description: #f1b2ce;
   --size-header: clamp(0rem, 0rem + 30.9333vw, 7.25rem);
   --size-text: 18px;
+  --background: url(../images/cover-image-dark.png) no-repeat center / cover;
 }
 
-@media (375px < width <= 768px) {
+@media (width >= 768px) {
   :root {
-  --size-header: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --size-header-medium: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 }
 
-@media (768px < width <= 1024px) {
+@media (width >= 1024px) {
   :root {
-    --size-header: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --size-header-more: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
 
