--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,6 +7,7 @@
   --color-title: #db00ff;
   --accent-color: #ff0070;
   --solid-color: #ff0070;
+  --frame-color: #ff007066;
   --color-subtitle: #000028;
   --color-description: #f1b2ce;
   --size-header: clamp(0rem, 0rem + 30.9333vw, 7.25rem);
@@ -16,13 +17,13 @@
 
 @media (width >= 768px) {
   :root {
-    --size-header-medium: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --size-header: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 }
 
 @media (width >= 1024px) {
   :root {
-    --size-header-more: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --size-header: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
 
